# devcontainer_tutorial

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
devcontainer_tutorial/: add1.py  test.ipynb  test.py
tests/: test_devcontainer_tutorial.py
